--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>JR Portafolio</title>
   </head>
   <body>
     <header>
