agregando enlace artesania app

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="secciones-port">
           <img class="logo-secciones" src="imagenes/logo-1.png" alt="logo" />
           <button class="boton-secciones">
-            <a class="link-secciones" href="/"> artesanias.com </a>
+            <a class="link-secciones" href="https://artesania.netlify.app/">Artesania</a>
           </button>
         </div>
 
