--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" type="image/png" href="/imagenes/colombia.png">
+
     <title>Soyco.dev</title>
   </head>
   <body>
