--- a/index.html
+++ b/index.html
@@ -8,27 +8,49 @@
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster+Two&family=Syncopate&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="imagenes/favicon.svg" type="image/x-icon">
     <title>Soyco.dev</title>
   </head>
   <body>
     <header>
-      <img class="logo" src="imagenes/logo.png" alt="logo" />
-      <h1 class="titulo">DESARROLLADOR WEB</h1>
-      <p class="slogan">Me encanta lo que hago</p>
-      <img class="saludo" src="imagenes/saludo.png" alt="saludo" />
+      <a href="https://github.com/RobledoJohn">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#github"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/robledojohn">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#linkedin"/>
+        </svg>
+      </a>
+      <a href="https://www.tiktok.com/@soyco.dev">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#tiktok"/>
+        </svg>  
+      </a>
     </header>
+    <main>
+      <ul class="menu">
+        <li class="menu-item"><a class="a" href="/">Inicio</a></li>
+        <li class="menu-item"><a class="a" href="#habilities">Habilidades</a></li>
+        <li class="menu-item"><a class="a" href="#portfolio">Portafolio</a></li>
+        <li class="menu-item"><a class="a" href="#contact">Contacto</a></li>
+      </ul>
+    </main>
+
+    <section class="seccion-banner">
+      <img class="logo" src="svg/Soyco.svg" alt="logo" />
+      <div class="soycodev"><h1>SOYCO.DEV</h1></div>
+    </section>
 
     <section class="seccion-quien">
-      <h2 class="titulo-quien">Hola! Soy John</h2>
-      <img class="foto-quien" src="imagenes/foto.png" alt="foto" />
+      <h2 class="titulo-quien">Full Stack Developer</h2>
       <p class="texto-quien">
-        Desde que comencé mi viaje como desarrollador hace 1 año, he realizado
+        Desde que comencé mi aprendizaje como <strong class="bolder">Desarrollador de software</strong>, he realizado
         trabajos remotos colaborado con personas talentosas para crear productos
         digitales para uso educativo. Soy tranquilo, naturalmente curioso y
         trabajo constantemente para mejorar mis habilidades, solucionando un
@@ -36,13 +58,67 @@
       </p>
     </section>
 
-    <section class="seccion-port">
-      <img class="astronauta" src="imagenes/colgando.png" alt="astronauta" />
+    <section class="seccion-hab" id="habilities">
+      <h2>Conocimientos</h2>
+      <div class="cont-hab">
+        <div class="slider">
+          <svg class="h-ico">
+            <use href="svg/logos.svg#html"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#css"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#js"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#nodejs"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#java"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#python"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#php"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#react"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#angular"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#bootstrap"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#laravel"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#springboot"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#express"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#mongo"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#mysql"/>
+          </svg>
+          <svg class="h-ico">
+            <use href="svg/logos.svg#postgre"/>
+          </svg>
+      </div>
+    </section>
+
+    <section class="seccion-port" id="portfolio">
       <div class="seg-fondo">
-        <h2 class="titulo-port">PORTAFOLIO</h2>
+        <h2 >PORTAFOLIO</h2>
 
         <div class="secciones-port">
-          <img class="logo-secciones" src="imagenes/logo-1.png" alt="logo" />
+          <img class="logo-secciones" src="imagenes/logo-art.png" alt="logo" />
           <button class="boton-secciones">
             <a class="link-secciones" href="https://artesania.netlify.app/">Artesania</a>
           </button>
@@ -66,37 +142,10 @@
       </div>
     </section>
 
-    <section class="seccion-redes">
-      <h2 class="titulo-redes">ENCUENTREME EN</h2>
-      <div class="ico-redes">
-        <a class="uno" href="https://www.linkedin.com/in/robledojohn/">
-          <img src="imagenes/linkedin.png" alt="linkedIn" class="logos-img" />
-        </a>
-        <a href="https://github.com/RobledoJohn" class="dos">
-          <img src="imagenes/github.png" alt="github" class="logos-img" />
-        </a>
-        <a href="https://wa.me/+573195754871" class="tres"
-          ><img src="imagenes/whatsapp.png" alt="whatsapp" class="logos-img" />
-        </a>
-        <a href="mailto:robledojohn@hotmail.com" class="cuatro">
-          <img src="imagenes/email.png" alt="email" class="logos-img" />
-        </a>
-        <a href="http://robledojohn.netlify.app" class="cinco">
-          <img src="imagenes/cv.png" alt="cv" class="logos-img" />
-        </a>
-        <img class="señalar seis" src="imagenes/señalar.png" alt="logo" />
-      </div>
-    </section>
-
-    <section class="seccion-contacto">
+    <section class="seccion-contacto" id="contact">
       <div class="contacto-items">
-        <img
-          class="astronauta-contacto"
-          src="imagenes/compu.png"
-          alt="astronauta"
-        />
         <div class="formulario">
-          <h2 class="titulo-contacto">CONTACTO</h2>
+          <h2>CONTACTO</h2>
           <form class="form">
             <label for="nombre"></label>
             <input id="nombre" type="text" placeholder="Nombre" />
@@ -113,7 +162,7 @@
     </section>
 
     <footer>
-      <p>Website diseñada con React © RobledoJohn, 2023</p>
+      <p>Website diseñada con Html 5 ©SOYCO.DEV, 2023</p>
     </footer>
   </body>
 </html>
