--- a/index.html
+++ b/index.html
@@ -32,13 +32,26 @@
           <use href="svg/social.svg#tiktok"/>
         </svg>  
       </a>
+      <a href="https://www.tiktok.com/@soyco.dev">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#instagram"/>
+        </svg>  
+      </a>
+      <a href="https://www.tiktok.com/@soyco.dev">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#twitter"/>
+        </svg>  
+      </a>
+      <a href="https://www.tiktok.com/@soyco.dev">
+        <svg class="ico-redes">
+          <use href="svg/social.svg#facebook"/>
+        </svg>
+      </a>
     </header>
     <main>
       <ul class="menu">
-        <li class="menu-item"><a class="a" href="/">Inicio</a></li>
-        <li class="menu-item"><a class="a" href="#habilities">Habilidades</a></li>
         <li class="menu-item"><a class="a" href="#portfolio">Portafolio</a></li>
-        <li class="menu-item"><a class="a" href="#contact">Contacto</a></li>
+        <li class="menu-item"><a class="a" href="mailto:robledojohn@hotmail.com?subject=Quiero%20contactarme%20contigo&body=Hola%20John,%20Quiero%20ponerme%20en%20contacto%20contigo.">Contacto</a></li>
       </ul>
     </main>
 
@@ -114,55 +127,28 @@
     </section>
 
     <section class="seccion-port" id="portfolio">
-      <div class="seg-fondo">
-        <h2 >PORTAFOLIO</h2>
-
-        <div class="secciones-port">
-          <img class="logo-secciones" src="imagenes/logo-art.png" alt="logo" />
-          <button class="boton-secciones">
-            <a class="link-secciones" href="https://artesania.netlify.app/">Artesania</a>
-          </button>
+      <h2>Proyectos</h2>
+      <div class="fondo-port">
+        <div class="box">
+          <a href="https://mastermind-app.site/">
+            <img class="img-bx" src="img/mastermind.JPG" alt="Mastermind system">
+          </a>
         </div>
-
-        <div class="secciones-port">
-          <img
-            class="logo-seccion-alura"
-            src="https://github.com/RobledoJohn/Alura-Encriptador/blob/master/imagenes/logo.png?raw=true"
-            alt="logo"
-          />
-          <button class="boton-secciones">
-            <a
-              class="link-secciones"
-              href="https://robledojohn.github.io/Alura-Encriptador/"
-            >
-              Encriptador de textos
-            </a>
-          </button>
+        <div class="box">
+          <a href="https://artesania.netlify.app/">
+            <img class="img-bx" src="img/artesanias.JPG" alt="Tienda Artesanias">
+          </a>          
         </div>
-      </div>
-    </section>
-
-    <section class="seccion-contacto" id="contact">
-      <div class="contacto-items">
-        <div class="formulario">
-          <h2>CONTACTO</h2>
-          <form class="form">
-            <label for="nombre"></label>
-            <input id="nombre" type="text" placeholder="Nombre" />
-            <label for="correo"></label>
-            <input id="correo" type="email" placeholder="email" />
-            <textarea
-              type="campotext"
-              placeholder="Ingrese su mensaje"
-            ></textarea>
-            <button class="boton-contacto" type="button">Enviar</button>
-          </form>
+        <div class="box">
+          <a href="https://robledojohn.github.io/Alura-Encriptador/">
+            <img class="img-bx img-alt" src="img/alura.JPG" alt="Encriptador">
+          </a>
         </div>
       </div>
     </section>
 
     <footer>
-      <p>Website diseñada con Html 5 ©SOYCO.DEV, 2023</p>
+      <p>Website diseñada por ©Soyco.dev, 2023</p>
     </footer>
   </body>
 </html>
